<resources>
    <string name="app_name">Random Number Generator</string>
    <string name="tab_text_1">Number</string>
    <string name="tab_text_2">List</string>
    <string name="tab_text_3">Dice</string>
    <string name="tab_text_4">Cast Lots</string>
    <string name="action_settings">Settings</string>

    <string name="number_from">From</string>
    <string name="number_to">To</string>
    <string name="number_lower_bound">1</string>
    <string name="number_upper_bound">100</string>

    <string name="cast_lots_total_items">Total Items</string>
    <string name="cast_lots_marked_items">Marked Items</string>
    <string name="cast_lots_total_hint">6</string>
    <string name="cast_lots_marked_hint">1</string>

    <string name="dice_number_of_dice">Number of Dice</string>
    <string name="dice_amount_dice">1</string>
    <string name="dice_number_of_sides">Number of Sides</string>
    <string name="dice_amount_sides">6</string>
    <string name="dice_radio_choice_1">1</string>
    <string name="dice_radio_choice_2">2</string>
    <string name="dice_radio_choice_3">3</string>
    <string name="dice_radio_choice_4">4</string>
    <string name="dice_other_amount_dice">Other</string>
    <string name="dice_other_amount_dice_hint">5-50</string>

    <string name="list_placeholder">To Be \nNot To Be</string>

</resources>
