<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiceFragment">


    <LinearLayout
        android:id="@+id/number_body_linear-layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dice_number_of_dice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dice_number_of_dice"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <EditText
            android:id="@+id/dice_number_of_dice_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/dice_amount_dice"
            android:inputType="number" />

        <TextView
            android:id="@+id/dice_number_sides"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dice_number_of_sides"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <EditText
            android:id="@+id/dice_amount_sides_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dice_amount_sides"
            android:inputType="number" />

    </LinearLayout>
</FrameLayout>