<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CastLotsFragment">

    <LinearLayout
        android:id="@+id/cast_lots_body_linear-layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cast_lots_total_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cast_lots_total_items"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cast_lots_total_items_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/cast_lots_total_hint"
                android:inputType="number"
                tools:textColorLink="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/cast-lots_marked_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cast_lots_marked_items"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cast_lots_marked_items_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/cast_lots_marked_hint"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

</FrameLayout>